--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- FAVICON (Navegadores de escritorio) -->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%23292524' stroke='%23d97706' stroke-width='4'/%3E%3Cg transform='translate(22,22) scale(2.3)'%3E%3Cpath d='M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z' fill='none' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='16' y1='8' x2='2' y2='22' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='17.5' y1='15' x2='9' y2='15' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3C/svg%3E" type="image/svg+xml">
     
-    <!-- APPLE TOUCH ICON (Respaldo Online PNG + Generación JS) -->
-    <!-- Usamos un placeholder de alta calidad con los colores exactos de la app como base -->
-    <link rel="apple-touch-icon" id="ios-icon" href="https://placehold.co/180x180/292524/d97706.png?text=S&font=playfair-display">
+    <!-- APPLE TOUCH ICON (Icono elegante para iOS) -->
+    <!-- Un cuadrado con el color de fondo y la pluma centrada. iOS redondeará las esquinas automáticamente. -->
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23292524'/%3E%3Cg transform='translate(50,50)'%3E%3Cg transform='translate(-28, -28) scale(2.3)'%3E%3Cpath d='M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z' fill='none' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='16' y1='8' x2='2' y2='22' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='17.5' y1='15' x2='9' y2='15' stroke='%23d97706' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E">
 
     <!-- Estilos & Librerías -->
     <script src="https://cdn.tailwindcss.com"></script>
