--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
                                     <button id="settings-login-btn" onclick="registerUser()" class="hidden w-full bg-white border border-stone-300 hover:bg-stone-50 text-stone-700 py-2 rounded text-xs font-bold flex items-center justify-center gap-2 transition-colors mb-2 shadow-sm">
                                         <i data-lucide="log-in" class="w-3 h-3 text-red-500"></i> Conectar con Google
                                     </button>
+                                    <a href="https://aistudio.google.com/app/apikey" target="_blank" class="w-full bg-white border border-stone-300 hover:bg-stone-50 text-stone-700 py-2 rounded text-xs font-bold flex items-center justify-center gap-2 transition-colors mb-2 shadow-sm">
+                                        <i data-lucide="key" class="w-3 h-3 text-amber-500"></i> Crear API Key
+                                    </a>
                                 </div>
                              </div>
                         </div>
