--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- FAVICONS DINÁMICOS (Basados en archivos PNG locales) -->
     <!-- Por defecto inicia con el tema 'Día' -->
     <link rel="icon" id="dynamic-favicon" type="image/png" href="Día.png">
-    <link rel="apple-touch-icon" id="dynamic-apple-icon" href="Día.png">
+    <!-- Se usa 'apple-touch-icon-precomposed' para intentar que iOS no modifique el icono, aunque el borde depende de la imagen. -->
+    <link rel="apple-touch-icon-precomposed" id="dynamic-apple-icon" href="Día.png">
 
     <!-- Librerías -->
     <script src="https://cdn.tailwindcss.com"></script>
