--- a/index.html
+++ b/index.html
@@ -522,13 +522,12 @@
         
         // --- TU CONFIGURACIÓN DE FIREBASE INTEGRADA ---
         const firebaseConfig = {
-          apiKey: "AIzaSyCfq5Y7Lhrr98Zeaqhj7dZXtUK05TtQkT4",
-          authDomain: "scriptorium-b97e4.firebaseapp.com",
-          projectId: "scriptorium-b97e4",
-          storageBucket: "scriptorium-b97e4.firebasestorage.app",
-          messagingSenderId: "578238239436",
-          appId: "1:578238239436:web:fd96552879e48700f42869",
-          measurementId: "G-Y6GT7V5N76"
+          apiKey: "AIzaSyBmv0HH4wS6aH3A14VfhHQsvH-HeCBb_mw",
+          authDomain: "scriptoriumv2-4c761.firebaseapp.com",
+          projectId: "scriptoriumv2-4c761",
+          storageBucket: "scriptoriumv2-4c761.firebasestorage.app",
+          messagingSenderId: "329572312900",
+          appId: "1:329572312900:web:62a62928ce9c4b4c899911"
         };
         // ----------------------------------------------
 
