--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- FAVICONS DINÁMICOS (Basados en archivos PNG locales) -->
     <!-- Por defecto inicia con el tema 'Día' -->
     <link rel="icon" id="dynamic-favicon" type="image/png" href="Día.png">
-    <!-- Se usa 'apple-touch-icon-precomposed' para intentar que iOS no modifique el icono, aunque el borde depende de la imagen. -->
+    <!-- Se usa 'apple-touch-icon-precomposed' para intentar que iOS no modifique el icono -->
     <link rel="apple-touch-icon-precomposed" id="dynamic-apple-icon" href="Día.png">
 
     <!-- Librerías -->
@@ -520,7 +520,7 @@
     <script>
         // --- 1. CONFIGURACIÓN Y VARIABLES ---
         
-        // --- TU CONFIGURACIÓN DE FIREBASE INTEGRADA ---
+        // --- TU CONFIGURACIÓN DE FIREBASE INTEGRADA (NUEVA) ---
         const firebaseConfig = {
           apiKey: "AIzaSyBmv0HH4wS6aH3A14VfhHQsvH-HeCBb_mw",
           authDomain: "scriptoriumv2-4c761.firebaseapp.com",
