--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@
         .btn-nav:hover { background-color: var(--bg-panel); color: var(--text-primary); transform: translateX(4px); }
         .btn-nav.active { background-color: var(--bg-panel); color: var(--accent-primary); box-shadow: var(--shadow-sm); font-weight: 600; }
         
-        /* Botones Navbar Mobile */
+        /* Botones Navbar Mobile - CORREGIDO */
         .mobile-nav-btn {
-            display: flex; flex-direction: column; items-align: center; justify-content: center;
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; /* Corregido: antes era items-align */
+            justify-content: center;
             gap: 4px; padding: 8px; border-radius: 12px; color: var(--text-secondary); transition: all 0.2s;
         }
         .mobile-nav-btn.active {
@@ -283,8 +286,8 @@
             </div>
         </div>
 
-        <!-- 2. VISTA EDITOR -->
-        <div id="view-editor" class="hidden h-full flex flex-col relative bg-transparent">
+        <!-- 2. VISTA EDITOR (CORREGIDO: flex-1 para no ocupar 100% y ocultar nav) -->
+        <div id="view-editor" class="hidden flex-1 flex flex-col relative bg-transparent overflow-hidden">
             <div id="editor-toolbar" class="flex-shrink-0 px-4 py-2 border-b border-theme bg-panel flex items-center justify-between z-20">
                 <div class="flex items-center gap-3 flex-1 min-w-0">
                     <div class="flex flex-col min-w-0 flex-1 max-w-md group">
